feat: product endpoint
